# ontology-verbalizer

./: .gitignore  README.md  docker-compose.yml  main.py  notes.md  playground.py  pyproject.toml  requirements.txt  run_llamafile.sh  setup.cfg
.github/workflows/: release.yml
core/: nlp.py  process.py  verbalizer.py  vocabulary.py
core/patterns/: __init__.py  owl_disjoint.py  owl_first_rest.py  owl_restriction.py
data/: Pizza.ttl  example.owl  people.ttl  sitbac.owl
evaluations/: analysis.ipynb  processed.py  raw.py  runs.xlsx
output/: dataset_1.csv  dataset_2.csv  dataset_3.csv  dataset_4.csv  dataset_5.csv  dataset_6.csv  sweet.csv  sweet.raw.csv
output/doid/1710635195/: file_0.csv  file_1.csv  file_10.csv  file_11.csv  file_12.csv  file_13.csv  file_16.csv  file_17.csv  file_18.csv  file_19.csv  file_20.csv  file_21.csv  file_3.csv  file_6.csv  file_8.csv
output/doid/gpt4/: file_0.csv  file_1.csv  file_10.csv  file_11.csv  file_12.csv  file_13.csv  file_14.csv  file_15.csv  file_16.csv  file_2.csv  file_3.csv  file_4.csv  file_5.csv  file_6.csv  file_7.csv  file_8.csv  file_9.csv
output/doid/llava-v1.5/: file_14.csv  file_15.csv  file_2.csv  file_22.csv  file_23.csv  file_4.csv  file_5.csv  file_7.csv  file_9.csv
output/envo/1710624525/: file_0.csv  file_1.csv  file_11.csv  file_12.csv  file_3.csv  file_4.csv  file_9.csv
output/envo/gpt4/: file_0.csv  file_1.csv  file_10.csv  file_11.csv  file_12.csv  file_13.csv  file_2.csv  file_3.csv  file_4.csv  file_5.csv  file_6.csv  file_7.csv  file_8.csv  file_9.csv
output/envo/llava-v1.5/: file_10.csv  file_13.csv  file_2.csv  file_5.csv  file_6.csv  file_7.csv  file_8.csv
output/people/1719519934/: file_0.csv
output/pizza/1719255673/: file_0.csv
output/pizza/1719256541/: file_0.csv
output/pizza/1719257264/: file_0.csv
output/pizza/1719257901/: file_0.csv
tests/: test_verbalization.py
verbalizer/: __init__.py  nlp.py  process.py  sampler.py  verbalizer.py  vocabulary.py
verbalizer/patterns/: __init__.py  owl_disjoint.py  owl_first_rest.py  owl_restriction.py
(+58 files in other folders)
