[metadata]
name = ontology-verbalizer
version = 1.0.0
description = A Python package for ontology verbalization
author = Your Name
author_email = your.email@example.com
license = MIT
platforms = any

[options]
packages = find:
package_dir =
    = verbalizer
include_package_data = true
python_requires = >=3.9

[options.packages.find]
where = verbalizer
